@@ -21,6 +21,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   e - make PBS_O_WORKDIR accessible in the environment for prolog scripts
   e - Bugzilla 59. Applied patch to allow '=' for qdel -m.
       (Chris Samuel - Univ. of Melbourne)
+  b - properly escape characters (&"'<>) in XML output)
 
 2.4.8
   e - Bugzilla bug 22. HIGH_PRECISION_FAIRSHARE for fifo scheduling.
